upload finished project

--- a/index.html
+++ b/index.html
@@ -4,24 +4,423 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<script src="main.js" defer></script>
+		<script src="main.js"></script>
 		<title>Bioderma test</title>
 	</head>
 	<body>
 		<main>
 			<div>
 				<button class="btn active" onclick="gridView(this)">
-					<div include="./assets/images/grid.svg"></div>
+					<svg
+						width="800px"
+						height="800px"
+						viewBox="0 0 24 24"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M14 5.6C14 5.03995 14 4.75992 14.109 4.54601C14.2049 4.35785 14.3578 4.20487 14.546 4.10899C14.7599 4 15.0399 4 15.6 4H18.4C18.9601 4 19.2401 4 19.454 4.10899C19.6422 4.20487 19.7951 4.35785 19.891 4.54601C20 4.75992 20 5.03995 20 5.6V8.4C20 8.96005 20 9.24008 19.891 9.45399C19.7951 9.64215 19.6422 9.79513 19.454 9.89101C19.2401 10 18.9601 10 18.4 10H15.6C15.0399 10 14.7599 10 14.546 9.89101C14.3578 9.79513 14.2049 9.64215 14.109 9.45399C14 9.24008 14 8.96005 14 8.4V5.6Z"
+							stroke="currentColor"
+							stroke-width="2"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						/>
+						<path
+							d="M4 5.6C4 5.03995 4 4.75992 4.10899 4.54601C4.20487 4.35785 4.35785 4.20487 4.54601 4.10899C4.75992 4 5.03995 4 5.6 4H8.4C8.96005 4 9.24008 4 9.45399 4.10899C9.64215 4.20487 9.79513 4.35785 9.89101 4.54601C10 4.75992 10 5.03995 10 5.6V8.4C10 8.96005 10 9.24008 9.89101 9.45399C9.79513 9.64215 9.64215 9.79513 9.45399 9.89101C9.24008 10 8.96005 10 8.4 10H5.6C5.03995 10 4.75992 10 4.54601 9.89101C4.35785 9.79513 4.20487 9.64215 4.10899 9.45399C4 9.24008 4 8.96005 4 8.4V5.6Z"
+							stroke="currentColor"
+							stroke-width="2"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						/>
+						<path
+							d="M4 15.6C4 15.0399 4 14.7599 4.10899 14.546C4.20487 14.3578 4.35785 14.2049 4.54601 14.109C4.75992 14 5.03995 14 5.6 14H8.4C8.96005 14 9.24008 14 9.45399 14.109C9.64215 14.2049 9.79513 14.3578 9.89101 14.546C10 14.7599 10 15.0399 10 15.6V18.4C10 18.9601 10 19.2401 9.89101 19.454C9.79513 19.6422 9.64215 19.7951 9.45399 19.891C9.24008 20 8.96005 20 8.4 20H5.6C5.03995 20 4.75992 20 4.54601 19.891C4.35785 19.7951 4.20487 19.6422 4.10899 19.454C4 19.2401 4 18.9601 4 18.4V15.6Z"
+							stroke="currentColor"
+							stroke-width="2"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						/>
+						<path
+							d="M14 15.6C14 15.0399 14 14.7599 14.109 14.546C14.2049 14.3578 14.3578 14.2049 14.546 14.109C14.7599 14 15.0399 14 15.6 14H18.4C18.9601 14 19.2401 14 19.454 14.109C19.6422 14.2049 19.7951 14.3578 19.891 14.546C20 14.7599 20 15.0399 20 15.6V18.4C20 18.9601 20 19.2401 19.891 19.454C19.7951 19.6422 19.6422 19.7951 19.454 19.891C19.2401 20 18.9601 20 18.4 20H15.6C15.0399 20 14.7599 20 14.546 19.891C14.3578 19.7951 14.2049 19.6422 14.109 19.454C14 19.2401 14 18.9601 14 18.4V15.6Z"
+							stroke="currentColor"
+							stroke-width="2"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						/>
+					</svg>
 				</button>
 				<button class="btn" onclick="listView(this)">
-					<div include="./assets/images/list.svg"></div>
+					<svg
+						width="800px"
+						height="800px"
+						viewBox="0 0 24 24"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M8 6.00067L21 6.00139M8 12.0007L21 12.0015M8 18.0007L21 18.0015M3.5 6H3.51M3.5 12H3.51M3.5 18H3.51M4 6C4 6.27614 3.77614 6.5 3.5 6.5C3.22386 6.5 3 6.27614 3 6C3 5.72386 3.22386 5.5 3.5 5.5C3.77614 5.5 4 5.72386 4 6ZM4 12C4 12.2761 3.77614 12.5 3.5 12.5C3.22386 12.5 3 12.2761 3 12C3 11.7239 3.22386 11.5 3.5 11.5C3.77614 11.5 4 11.7239 4 12ZM4 18C4 18.2761 3.77614 18.5 3.5 18.5C3.22386 18.5 3 18.2761 3 18C3 17.7239 3.22386 17.5 3.5 17.5C3.77614 17.5 4 17.7239 4 18Z"
+							stroke="currentColor"
+							stroke-width="2"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						/>
+					</svg>
 				</button>
 			</div>
-			<div
-				id="product_grid"
-				class="product-grid"
-				include="./product-grid.html"
-			>
+			<div id="product_grid" class="product-grid">
+				<div class="product-tile">
+					<div class="image-container">
+						<img
+							src="assets/images/atoderm_intensive_baume.png"
+							alt="intensive baume"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">Meilleure vente</span>
+						<h3 class="product-title">
+							<span>Atoderm</span>
+							<span class="product-name">Intensive Baume</span>
+						</h3>
+						<p>Soin peaux sensibles, sèches à atopiques</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&star;</span
+							>
+							<span class="reviews">574 avis</span>
+						</p>
+						<p>
+							dès <span class="price-number">19,80€</span> | 3
+							formats
+						</p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile crealine">
+					<div class="image-container">
+						<img
+							src="assets/images/h2o.png"
+							alt="h2o"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">-50%</span>
+						<h3 class="product-title">
+							<span>Créaline</span>
+							<span class="product-name">H<sub>2</sub>0</span>
+						</h3>
+						<p>Soin peaux sensibles, normales</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&star;</span
+							>
+							<span class="reviews">289 avis</span>
+						</p>
+						<p>
+							dès
+							<span class="price-number-crossed"
+								><s>11,10€</s></span
+							><span class="price-number"> 9,99€</span> | 2
+							formats
+						</p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile hydrabio">
+					<div class="image-container">
+						<img
+							src="assets/images/hyalu_serum.png"
+							alt="hyalu+ sérum"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">Nouveauté</span>
+						<h3 class="product-title">
+							<span>Hydrabio</span>
+							<span class="product-name">Hyalu+ sérum</span>
+						</h3>
+						<p>Soin peaux sensibles déshydratées</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&star;</span
+							>
+							<span class="reviews">387 avis</span>
+						</p>
+						<p><span class="price-number">19,80€</span></p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile sebium">
+					<div class="image-container">
+						<img
+							src="assets/images/hydra_cleanser.png"
+							alt="hydra cleanser"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">-30%</span>
+						<h3 class="product-title">
+							<span>Sébium</span>
+							<span class="product-name">Hydra Cleanser</span>
+						</h3>
+						<p>Soin peaux acnéique, grasses</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&starf;</span
+							>
+							<span class="reviews">102 avis</span>
+						</p>
+						<p>
+							<span class="price-number-crossed"
+								><s>11,70€</s></span
+							><span class="price-number"> 8.70€</span>
+						</p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile hydrabio">
+					<div class="image-container">
+						<img
+							src="assets/images/hyalu_serum.png"
+							alt="hyalu+ sérum"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">Nouveauté</span>
+						<h3 class="product-title">
+							<span>Hydrabio</span>
+							<span class="product-name">Hyalu+ sérum</span>
+						</h3>
+						<p>Soin peaux sensibles déshydratées</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&star;</span
+							>
+							<span class="reviews">387 avis</span>
+						</p>
+						<p><span class="price-number">19,80€</span></p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile crealine">
+					<div class="image-container">
+						<img
+							src="assets/images/h2o.png"
+							alt="h2o"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">-50%</span>
+						<h3 class="product-title">
+							<span>Créaline</span>
+							<span class="product-name">H<sub>2</sub>0</span>
+						</h3>
+						<p>Soin peaux sensibles, normales</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&star;</span
+							>
+							<span class="reviews">289 avis</span>
+						</p>
+						<p>
+							dès
+							<span class="price-number-crossed"
+								><s>11,10€</s></span
+							><span class="price-number"> 9,99€</span> | 2
+							formats
+						</p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile sebium">
+					<div class="image-container">
+						<img
+							src="assets/images/hydra_cleanser.png"
+							alt="hydra cleanser"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">-30%</span>
+						<h3 class="product-title">
+							<span>Sébium</span>
+							<span class="product-name">Hydra Cleanser</span>
+						</h3>
+						<p>Soin peaux acnéique, grasses</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&starf;</span
+							>
+							<span class="reviews">102 avis</span>
+						</p>
+						<p>
+							<span class="price-number-crossed"
+								><s>11,70€</s></span
+							><span class="price-number"> 8.70€</span>
+						</p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="product-tile">
+					<div class="image-container">
+						<img
+							src="assets/images/atoderm_intensive_baume.png"
+							alt="intensive baume"
+							class="product-image"
+						/>
+					</div>
+					<div class="info-container">
+						<span class="badge">Meilleure vente</span>
+						<h3 class="product-title">
+							<span>Atoderm</span>
+							<span class="product-name">Intensive Baume</span>
+						</h3>
+						<p>Soin peaux sensibles, sèches à atopiques</p>
+						<p class="rating">
+							<span class="stars"
+								>&starf;&starf;&starf;&starf;&star;</span
+							>
+							<span class="reviews">574 avis</span>
+						</p>
+						<p>
+							dès <span class="price-number">19,80€</span> | 3
+							formats
+						</p>
+						<button class="basket">
+							<svg
+								width="30px"
+								height="30px"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M3 10H21M3 10L5 20H19L21 10M3 10L9 4M21 10L15 4"
+									stroke="currentColor"
+									stroke-width="1.5"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
 			</div>
 		</main>
 	</body>
